--- a/.gitignore
+++ b/.gitignore
@@ -11,14 +11,14 @@ dz/*
 issues*
 .sync/*
 
-*.aux
-*.lof
-*.log
-*.lot
-*.fls
-*.out
-*.toc
-*.fmt
-*.fot
-*.cb
-*.cb2
+*/*/*.aux
+*/*/*.lof
+*/*/*.log
+*/*/*.lot
+*/*/*.fls
+*/*/*.out
+*/*/*.toc
+*/*/*.fmt
+*/*/*.fot
+*/*/*.cb
+*/*/*.cb2
