--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,8 @@
-lectures/*/*
-!lectures/*/*.tex
-!lectures/*/*.jpg
-!lectures/*/*.png
-!lectures/*/*.sh
-labs/*
-!labs/*.tex
-dz/*
-!dz/*.tex
-!dz/*.dat
-issues*
-.sync/*
-
-*/*/*.aux
-*/*/*.lof
-*/*/*.log
-*/*/*.lot
-*/*/*.fls
-*/*/*.out
-*/*/*.toc
-*/*/*.fmt
-*/*/*.fot
-*/*/*.cb
-*/*/*.cb2
+*.aux
+*.log
+*.nav
+*.out
+*.snm
+*.toc
+*.vrb
+*.pdf
